fix alignment and grid reflow

--- a/client/css/home.css.less
+++ b/client/css/home.css.less
@@ -39,6 +39,10 @@
     }
   }
 
+  .template-set, .curated-set {
+    padding: 0px;
+  }
+
   .curated-board {
     max-width: 310px;
     position: relative;
@@ -81,6 +85,10 @@
     -moz-transition: opacity 500ms;
     -o-transition: opacity 500ms;
     transition: opacity 500ms;
+  }
+
+  .curated-caption.template-caption {
+    background: rgba(68,157,68,0.5);
   }
 
   .curated-caption span {
